tests/invalid/const_from_non_const_identifier.wio
fn Entry(args: string[]) -> i32 {
    let base: i32 = 7;
    const value: i32 = base + 1;
    return 0;
}
